Mount sqlite db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "1"
+version: "2.2"
 
 services:
   api:
@@ -13,6 +13,10 @@ services:
       TZ: 'Europe/Brussels'
     devices:
       - "/dev/ttyACM0:/dev/ttyACM0"
+    volumes:
+      - type: bind
+        source: ./db.db3
+        target: /db.db3
     healthcheck:
       test: curl --fail http://localhost:3000/health || exit 1
       interval: 5s
